rest/server/redis-deployment.yaml
# apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
# kind: Deployment
# metadata:
#   name: redis
# spec:
#   selector:
#     matchLabels:
#       app: redis
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: redis
#     spec:
#       containers:
#       - name: master
#         image: redis
#         resources:
#           requests:
#             cpu: 100m
#             memory: 400Mi
#         ports:
#         - containerPort: 6379
# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
