rest/server/redis-service.yaml
#
# The original Google demo depended on gaving a service "redis-master" AND
# a service "redis-slave". We're using a single redis server, so we create
# two services that point to the same pod.
#
#
# apiVersion: v1
# kind: Service
# metadata:
#   name: redis
#   labels:
#     app: redis
# spec:
#   ports:
#     # - protocol: "TCP"
#     - port: 6379
#       targetPort: 6379
#   selector:
#     app: redis
#     tier: frontend

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 6379
      targetPort: 6379
      protocol: TCP
